--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,5 +102,6 @@
 	"search.exclude": {
 		"dist/**": true
 	},
-	"typescript.check.workspaceVersion": false
+    "typescript.check.workspaceVersion": false,
+    "vsicons.presets.angular": false
 }
